fixtures/frontend/milestone-2/invalid/source-contract-missing-type/main.aivi
type HttpError =
  | Timeout
  | DecodeFailure Text

type User = {
    id: Int,
    name: Text
}

type DecodeMode =
  | Strict
  | Permissive

domain Duration over Int
    literal s : Int -> Duration

domain Repeat over Int
    literal x : Int -> Repeat

@source http.get "/users" with {
    decode: Strict,
    retry: 3x,
    timeout: 5s
}
signal users : Signal (Result HttpError (List User))
